fix max-width of container on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -186,11 +186,14 @@ ul.technology-list li:not(:last-child)::after {
   		font-size: 48px;
   		padding-left: 12px;
       	padding-right: 12px;
+      	margin-right: 0;
+      	margin-left: 0;
   	}
 
   	.container {
   		padding: 0;
       	margin: 0;
+      	max-width: 100%;
     }
 
     .navbar-fixed {
